--- a/MoEngage/app/build.gradle
+++ b/MoEngage/app/build.gradle
@@ -14,6 +14,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -33,6 +38,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
     // LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
+   implementation   'android.arch.lifecycle:extensions:1.1.1'
     // Lifecycles only (without ViewModel or LiveData)
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
