--- a/MoEngage/app/build.gradle
+++ b/MoEngage/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     implementation 'com.android.support:cardview-v7'
 
